[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/Enemies/Brute/Brute.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/Brute/Brute.png" type="Texture" id=2]
[ext_resource path="res://Assets/Shadows/MediumShadow.png" type="Texture" id=3]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=3]
radius = 4.12311

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Smash"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 1, 1.1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1, 1 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "slam"
}, {
"args": [ "state", 0 ],
"method": "set"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Brute" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 2000
bulletCount = 16

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="ScaleHelper" type="Node2D" parent="."]
scale = Vector2( 1.01667, 0.983333 )

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
hframes = 4
vframes = 2
frame = 7

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -1, -2 )
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"enemy",
]]
position = Vector2( -1, -11 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Run = SubResource( 1 )
anims/Smash = SubResource( 2 )

[node name="Hurt" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 5 )

[node name="SlamTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="SlamTimer" to="." method="_on_slam_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]

[editable path="SoftCollision"]
